syntax = "proto3";
package inventory.v1;
option go_package = "github.com/adopabianko/commerce/proto/gen/inventory/v1;inventoryv1";

service InventoryService {
  rpc CheckStock(CheckStockRequest) returns (CheckStockResponse);
  rpc ReserveStock(ReserveStockRequest) returns (ReserveStockResponse);
  rpc ReleaseStock(ReleaseStockRequest) returns (ReleaseStockResponse);
}

message Item { string sku = 1; int32 qty = 2; }
message CheckStockRequest { repeated Item items = 1; }
message CheckStockResponse { bool ok = 1; string message = 2; map<string,int32> shortages = 3; }
message ReserveStockRequest { repeated Item items = 1; }
message ReserveStockResponse { bool ok = 1; string message = 2; }
message ReleaseStockRequest { repeated Item items = 1; }
message ReleaseStockResponse { bool ok = 1; string message = 2; }
